v2.0.x-SNAPSHOT/connectors/database/db2.mdx
---
title: DB2 Connector | OpenMetadata Database Integration Guide
description: Connect DB2 databases to OpenMetadata with our comprehensive connector guide. Step-by-step setup, configuration, and metadata extraction instructions.
sidebarTitle: Overview
---
import { ConnectorDetailsHeader } from '/snippets/components/ConnectorDetailsHeader/ConnectorDetailsHeader.jsx'
import MetadataAgentDatabase from '/snippets/connectors/metadata-agent/database.mdx'
import Related from '/snippets/v2.0.x-SNAPSHOT/connectors/database/related.mdx'

<ConnectorDetailsHeader
icon='/public/images/connectors/ibmdb2.webp'
name="DB2"
stage="PROD"
availableFeatures={["Metadata", "Data Profiler", "Data Quality", "View Lineage", "View Column-level Lineage", "dbt", "Sample Data", "Auto-Classification"]}
unavailableFeatures={["Query Usage", "Owners", "Tags", "Stored Procedures"]} />
<Warning>
OpenMetadata doesn't ship DB2 connector in the ingestion contain by default.
Please make sure you install the below Python package in the ingestion container if you are planning on running DB2 Connector.
If you are running this as part of docker
```code
docker exec -it openmetadata_ingestion pip install '.[db2]'
```
Using python pip, Please make sure you provide appropriate version of ingestion in below command
```code
 pip install 'openmetadata-ingestion[db2]==1.2.4.0'
```
</Warning>
In this section, we provide guides and references to use the DB2 connector.
Configure and schedule DB2 metadata and profiler workflows from the OpenMetadata UI:
- [Requirements](#requirements)
- [Metadata Ingestion](#metadata-ingestion)
- [Lineage](/v2.0.x-SNAPSHOT/how-to-guides/data-lineage/workflow)
- [Data Profiler](/v2.0.x-SNAPSHOT/how-to-guides/data-quality-observability/profiler/profiler-workflow)
- [Data Quality](/v2.0.x-SNAPSHOT/how-to-guides/data-quality-observability/quality)
- [dbt Integration](/v2.0.x-SNAPSHOT/connectors/database/dbt)
- [Troubleshooting](/v2.0.x-SNAPSHOT/connectors/database/db2/troubleshooting)

## Requirements

To create a new DB2 user, follow [IBM's guide to creating users manually](https://www.ibm.com/docs/ko/samfess/8.2.0?topic=schema-creating-users-manually).
The user must have the following permissions to ingest the metadata.

### DB2 for LUW (Linux, UNIX, Windows)

- `SELECT` privilege on `SYSCAT.SCHEMATA` to fetch the metadata of schemas.
```sql
-- Grant SELECT on tables for schema metadata
GRANT SELECT ON SYSCAT.SCHEMATA TO USER_NAME;
```

### DB2 for z/OS

DB2 for z/OS uses `SYSIBM.*` catalog tables instead of `SYSCAT.*`. The connector auto-detects the platform and uses the appropriate catalog tables. The following permissions are required:

- `SELECT` privilege on `SYSIBM.SYSTABLES` to fetch schemas, table names, and table comments.
```sql
GRANT SELECT ON SYSIBM.SYSTABLES TO USER_NAME;
```

- `SELECT` privilege on `SYSIBM.SYSCOLUMNS` to fetch column metadata for tables.
```sql
GRANT SELECT ON SYSIBM.SYSCOLUMNS TO USER_NAME;
```

- `SELECT` privilege on `SYSIBM.SYSVIEWS` to fetch view names and definitions.
```sql
GRANT SELECT ON SYSIBM.SYSVIEWS TO USER_NAME;
```

- `SELECT` privilege on `SYSIBM.SYSINDEXES` to fetch index and primary key information.
```sql
GRANT SELECT ON SYSIBM.SYSINDEXES TO USER_NAME;
```

- `SELECT` privilege on `SYSIBM.SYSTABCONST` to fetch table constraints (primary keys, unique constraints).
```sql
GRANT SELECT ON SYSIBM.SYSTABCONST TO USER_NAME;
```

- `SELECT` privilege on `SYSIBM.SYSKEYCOLUSE` to fetch key column usage for constraints.
```sql
GRANT SELECT ON SYSIBM.SYSKEYCOLUSE TO USER_NAME;
```

- `SELECT` privilege on `SYSIBM.SYSFOREIGNKEYS` to fetch foreign key column details.
```sql
GRANT SELECT ON SYSIBM.SYSFOREIGNKEYS TO USER_NAME;
```

- `SELECT` privilege on `SYSIBM.SYSRELS` to fetch foreign key relationships between tables.
```sql
GRANT SELECT ON SYSIBM.SYSRELS TO USER_NAME;
```

- `SELECT` privilege on `SYSIBM.SYSSEQUENCES` to fetch sequence metadata.
```sql
GRANT SELECT ON SYSIBM.SYSSEQUENCES TO USER_NAME;
```

### Profiler and Data Quality

Executing the profiler workflow or data quality tests requires the user to have `SELECT` permission on the tables and schemas where the profiler or tests run. For more information, see the [profiler workflow guide](/v2.0.x-SNAPSHOT/how-to-guides/data-quality-observability/profiler/profiler-workflow) and the [data quality guide](/v2.0.x-SNAPSHOT/how-to-guides/data-quality-observability/quality).

## Metadata Ingestion

To ingest metadata from DB2, you need to create a service connection. The service connects DB2 with OpenMetadata. Once you create a service, OpenMetadata automatically starts ingesting metadata.

### Step 1: Add New Service

1. Navigate to **Settings** > **Services**.

   <img src="/public/images/connector2.0/metadata-ingestion/access-services.png" alt="Navigate to Settings and Services" />

2. Click **Add New Service**.

   <img src="/public/images/connector2.0/metadata-ingestion/add-new-service.png" alt="Add New Service" />

### Step 2: Select a Service and Connector

From the service type dropdown, select **Database Services**, then click the **DB2** connector tile.

![Select Service](/public/images/connector2.0/metadata-ingestion/Database/select-service/db2.png)

### Step 3: Add Service Name and Description

- Enter a unique, descriptive **Service Name**. OpenMetadata identifies services by their service name. Enter a name that distinguishes this deployment from other DB2 services you are ingesting metadata from.
- Optional: Enter a **Description** for the service.

![Configure Service](/public/images/connector2.0/metadata-ingestion/Database/service-name/db2.png)

<Note>
**Note**: The service name cannot be changed after it is set.
</Note>

### Step 4: Configure Connection Options

Specify your source credentials and verify the connection.

#### Enter Connection Details

Enter the connection details for DB2. The right-hand panel in the UI displays inline help for each field.

![Configure Service Connection](/public/images/connector2.0/metadata-ingestion/Database/connection-details/db2.png)

- **Username**: Specify the user to connect to DB2. It should have enough privileges to read all the metadata.
- **Password**: Password to connect to DB2.
- **database**: Database of the data source.
- **Host and Port**: Enter the fully qualified hostname and port number for your DB2 deployment in the Host and Port field.
- **License File Name**: License file name in case the license is required for connection.
- **License**: Contents of your license file if applicable, make sure to replace new lines with `\n` before pasting it here.

<Tip>
If you are using DB2 for IBM i:
- From advanced config, choose the `ibmi` scheme.
- In Host and Port, don't add the port number.
</Tip>
<Tip>
If you have a **db2jcc_license_cisuz.jar** file, it will not work with **ibm_db**. This file is a **Db2 Connect** license for the Java Driver.
For **non-Java drivers**, such as the Python Client used in OpenMetadata ingestion, a **Db2 Connect** client-side license is required, typically named **db2con*.lic**.
The **db2jcc_license_cisuz.jar** is specifically for Java-based clients, whereas OpenMetadata ingestion operates with a Python Client, making the `.jar` file incompatible.

To activate a non-Java license for Db2 Connect **Application Server Edition**, **Advanced Application Server Edition**, **Enterprise Edition**, or **Trial**, follow these steps:
- Download the **license activation kit** from IBM Passport Advantage: [IBM PPA](https://www.ibm.com/software/passportadvantage/pao_customer.html).
- Unzip the package and locate the **non-Java license file** (for example, `db2consv_ee.lic`).
- Apply the `.lic` file to activate the license.
For more information, see [Everything About Db2 Connect Licensing](https://community.ibm.com/community/user/datamanagement/blogs/shilu-mathai2/2023/05/05/everything-about-db2-connect-licensing).
</Tip>

**Advanced Config** *(driver-level options; most connections don't need these)*
- **Connection Options (Optional)**: Enter any additional connection options that can be sent to the database during the connection. These details must be added as key-value pairs.
- **Connection Arguments (Optional)**: Enter any additional connection arguments such as security or protocol configs that can be sent during the connection. These details must be added as key-value pairs.

#### Test Connection

Once the credentials have been added, click on **Test Connection** and **Save** the changes.

<img src="/public/images/connectors/test-connection.png" alt="Test Connection" />

### Step 5: Configure Ingestion Options

In the **What to Ingest** step, use filter patterns to control which assets OpenMetadata ingests from your database service. Filter patterns use regular expressions applied to asset names.

#### How Filter Patterns Work

- **Include**: Add one or more comma-separated regular expressions. OpenMetadata ingests only assets whose names match at least one expression. Leave blank to include all assets.
- **Exclude**: Add one or more comma-separated regular expressions. OpenMetadata skips any asset whose name matches an expression. Leave blank to exclude nothing.

Rules match asset names using one of five expressions:

- **contains**: matches any name containing the value. For example, `sales` matches `my_sales_data` and `sales_2024`.
- **starts with**: matches names beginning with the value. For example, `prod_` matches `prod_db` and `prod_schema`.
- **ends with**: matches names ending with the value. For example, `_raw` matches `events_raw` and `logs_raw`.
- **is exactly**: matches the exact name only. For example, `analytics` matches only `analytics`.
- **matches regex**: matches names using a regular expression. For example, `^prod_.*_v\d+$` matches `prod_events_v1`.

When both Include and Exclude are set, Exclude takes priority.

<Tip>
Leave all filter patterns empty to ingest all databases, schemas, and tables available in the source.
</Tip>

**Filter Options**

The Database, Schema, and Table sections each include the following filter options:

- **Database**: Controls which databases OpenMetadata ingests from the source.
- **Schema**: Controls which schemas within the ingested databases are included.
- **Table**: Controls which tables and views within the ingested schemas are included.

Each section provides the following controls:

- **Scan Mode**: You can choose between the following scan modes:
    - **Scan all**: Ingests every asset of that type the connector can access. This is the default.
    - **Only specific**: Enables include rules so only assets matching at least one rule are ingested.
- **Exclude system toggle**: Use this toggle to automatically filter out system-reserved names defined by the connector, for example, **Exclude system databases** for the Databases section.
- **Always exclude**: Add permanent exclusion rules (shown in red). Assets matching these rules are never ingested, regardless of include rules.
- **Preview**: Shows a real-time summary of what will be in scope based on your current rules.
- **Include rules** *(available only in **Only specific** mode)*: Click **+ Add** to define a rule. Added rules appear as chips; an asset is included if it matches any rule.

### Step 6: Create & Deploy

Click **Create & Deploy** to deploy the agent and start the first metadata ingestion run. OpenMetadata saves the service configuration and immediately begins pulling metadata from the source.

To monitor ingestion progress or view the service you just added, go to **Settings** > **Services** and select your service.

## Configure Metadata Agent and Schedule Ingestion

<MetadataAgentDatabase />

<Related />
